--- a/media/menu/css/demo.css
+++ b/media/menu/css/demo.css
@@ -9,6 +9,6 @@ Distributed under the Creative Commons Attribution 3.0 License
 html, body { border:0; margin:0; padding:0; }
 body { font:12px Arial, Helvetica, sans-serif; background: url(../img/bg-tile.png) repeat; color: #444}
 
-.wrapper { width:757px; margin:60px auto; }
+.wrapper { width:90%; margin:60px auto; }
 
 h1 {width: 757px; margin: 60px auto 5px; font-size: 16px; font-family: Georgia, Times New Roman, serif; font-weight: normal; font-style: italic; color: #777; }
